# codex_dspy

./: .gitignore  LICENSE  README.md  codex_agent.py  example_usage.py  main.py  pyproject.toml
docs/: CODEX_ARCHITECTURE.md  CODEX_QUICK_REFERENCE.md  CODEX_SDK_API_SURFACE.md
examples/: basic_usage.py  main.py
src/codex/: __init__.py  client.py  config.py  discovery.py  events.py  exceptions.py  exec.py  items.py  schema.py  thread.py
src/codex_dspy/: __init__.py  agent.py
